[gd_scene load_steps=71 format=3 uid="uid://e2wj2852x8ad"]

[ext_resource type="Script" path="res://Scripts/Enemy/enemy_souls.gd" id="1_ptm67"]
[ext_resource type="Texture2D" uid="uid://bwh34q67mwb4i" path="res://Assets/Soul/faded_sphere.png" id="2_q2nms"]
[ext_resource type="Material" uid="uid://b1d7tdbiebmv0" path="res://FX/enemy_souls.tres" id="3_05gl6"]
[ext_resource type="Texture2D" uid="uid://pxwgylful2el" path="res://Assets/texture_test.jpg" id="3_nkbhg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i4gix"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3axou"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_cep4b"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cnnl"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_32lkp"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cdaq"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3023"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybbgs"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7bjd"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_att0a"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrgfo"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmb1c"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfdu0"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5ycf"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_420id"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3f23"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_aem4o"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 1000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_caiw4"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e155"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dqyn"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d04f"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2xtw"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j8qg"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_31jsg"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_uj2s8"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 2000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ortn8"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6hvi"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdsl6"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gxkb"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_agh6j"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_thekp"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7dgi"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_gulwk"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 3000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcj2b"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a7la"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf64c"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_37u6b"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_20xtm"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhfjh"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwnps"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nkfi"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 4000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_2em2v"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw4gd"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic7iq"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgn5x"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0xfv"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7xw3"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlk8v"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_53paq"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 5000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhcfa"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0w5m"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_palgc"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1fq3"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_fblkr"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy2wh"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_o84qe"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ea48"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 6000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_85ng3"]
atlas = ExtResource("3_nkbhg")
region = Rect2(0, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_acout"]
atlas = ExtResource("3_nkbhg")
region = Rect2(1000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvg6l"]
atlas = ExtResource("3_nkbhg")
region = Rect2(2000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_sscw3"]
atlas = ExtResource("3_nkbhg")
region = Rect2(3000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt0i7"]
atlas = ExtResource("3_nkbhg")
region = Rect2(4000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqeh8"]
atlas = ExtResource("3_nkbhg")
region = Rect2(5000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3n6u"]
atlas = ExtResource("3_nkbhg")
region = Rect2(6000, 7000, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl1d2"]
atlas = ExtResource("3_nkbhg")
region = Rect2(7000, 7000, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_rgmp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3axou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cep4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cnnl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32lkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cdaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3023")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybbgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7bjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_att0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrgfo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmb1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfdu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5ycf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_420id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3f23")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aem4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_caiw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e155")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dqyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d04f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2xtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j8qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31jsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uj2s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ortn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6hvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdsl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gxkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agh6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thekp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7dgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gulwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcj2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a7la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf64c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37u6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20xtm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhfjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwnps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nkfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2em2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw4gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic7iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgn5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0xfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7xw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlk8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53paq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhcfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0w5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_palgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1fq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fblkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy2wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o84qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ea48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85ng3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acout")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvg6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sscw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt0i7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqeh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3n6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl1d2")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="EnemySouls" type="Node2D"]
script = ExtResource("1_ptm67")

[node name="Anchors" type="Node2D" parent="."]
position = Vector2(0, -15)

[node name="fire_souls_01" type="Area2D" parent="Anchors"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchors/fire_souls_01"]
position = Vector2(-50, 0)
shape = SubResource("CircleShape2D_i4gix")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Anchors/fire_souls_01/CollisionShape2D"]
amount = 100
process_material = ExtResource("3_05gl6")
texture = ExtResource("2_q2nms")

[node name="fire_souls_02" type="Area2D" parent="Anchors"]
visibility_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchors/fire_souls_02"]
position = Vector2(50, 0)
shape = SubResource("CircleShape2D_i4gix")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Anchors/fire_souls_02/CollisionShape2D"]
amount = 100
process_material = ExtResource("3_05gl6")
texture = ExtResource("2_q2nms")

[node name="fire_souls_03" type="Area2D" parent="Anchors"]
visibility_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchors/fire_souls_03"]
position = Vector2(0, 45)
shape = SubResource("CircleShape2D_i4gix")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Anchors/fire_souls_03/CollisionShape2D"]
amount = 100
process_material = ExtResource("3_05gl6")
texture = ExtResource("2_q2nms")

[node name="fire_souls_04" type="Area2D" parent="Anchors"]
visibility_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchors/fire_souls_04"]
position = Vector2(0, -50)
shape = SubResource("CircleShape2D_i4gix")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Anchors/fire_souls_04/CollisionShape2D"]
amount = 100
process_material = ExtResource("3_05gl6")
texture = ExtResource("2_q2nms")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchors"]
scale = Vector2(0.01, 0.01)
sprite_frames = SubResource("SpriteFrames_rgmp6")

[connection signal="body_entered" from="Anchors/fire_souls_01" to="." method="_on_fire_souls_01_body_entered"]
[connection signal="body_entered" from="Anchors/fire_souls_02" to="." method="_on_fire_souls_02_body_entered"]
[connection signal="body_entered" from="Anchors/fire_souls_03" to="." method="_on_fire_souls_03_body_entered"]
[connection signal="body_entered" from="Anchors/fire_souls_04" to="." method="_on_fire_souls_04_body_entered"]
